[package]
name = "ten-minute-physics-rs"
version = "0.1.0"
repository = "https://github.com/cerrno/ten-minute-physics-rs"
authors = ["Lucas V. Schuermann <lucas@lvs.io>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
cgmath = "0.18"
getrandom = { version = "0.2" }
rand = "0.8"
once_cell = "1.17"
macroquad = "0.3.25"

[profile.release]
codegen-units = 1